Fix markdown code blocks on mobile

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,3 +1,7 @@
+pre {
+    overflow-x: auto;
+}
+
 /**
     Override default scroll behavior on mobile
  */
